Make items expandable
Move item details to footer, only visible if expanded.

Also merge check and uncheck buttons and fix moving item after viewing votes.

Close #45 and close #64.

--- a/client/index.html
+++ b/client/index.html
@@ -579,6 +579,7 @@
         <form
             data-class-listling-item-has-content="or item.text item.resource item.location"
             data-class-listling-item-votes-user-voted="votesMeta.user_voted"
+            data-class-listling-item-expanded="expanded"
         >
             <header class="micro-panel">
                 <div class="micro-ol-handle listling-item-mode-view micro-interactive"
@@ -620,26 +621,17 @@
                     </micro-contextual>
                 </div>
 
-                <div class="listling-item-mode-view" data-content="switch item.checked">
-                    <template>
-                        <button
-                            is="micro-button" type="button" class="listling-item-uncheck action"
-                            data-run="uncheck" data-disabled="isCheckDisabled item.trashed lst.mode"
-                            data-shortcut="new Shortcut 'X' 'Uncheck'"
-                        >
-                            <i class="fa fa-check-square"></i>
-                        </button>
-                    </template>
-                    <template>
-                        <button
-                            is="micro-button" type="button" class="listling-item-check action"
-                            data-run="check" data-disabled="isCheckDisabled item.trashed lst.mode"
-                            data-shortcut="new Shortcut 'X' 'Check'"
-                        >
-                            <i class="far fa-square"></i>
-                        </button>
-                    </template>
-                </div>
+                <button
+                    is="micro-button" type="button"
+                    class="listling-item-check action listling-item-mode-view"
+                    data-run="checkUncheck" data-disabled="isCheckDisabled item.trashed lst.mode"
+                    data-shortcut="new Shortcut 'X' 'Check / Uncheck'"
+                >
+                    <i
+                        data-class-fa="item.checked" data-class-fa-check-square="item.checked"
+                        data-class-far="not item.checked" data-class-fa-square="not item.checked"
+                    ></i>
+                </button>
 
                 <h1 class="micro-panel-main">
                     <span class="listling-item-mode-view" data-content="markup item.title"></span>
@@ -776,16 +768,6 @@
                     </div>
                 </label>
 
-                <p
-                    class="listling-detail listling-item-mode-view micro-interactive"
-                    title="Edited by"
-                >
-                    <i class="fa fa-pencil-alt"></i>
-                    <span data-content="join item.authors 'user'">
-                        <template><micro-user data-user="user"></micro-user></template>
-                    </span>
-                </p>
-
                 <div data-content="switch editMode">
                     <template>
                         <ul is="micro-menu">
@@ -809,6 +791,15 @@
                     </template>
                 </div>
             </div>
+
+            <footer class="listling-item-footer micro-small listling-item-mode-view">
+                <i class="fa fa-user-cog"></i> Item by
+                <micro-user data-user="item.authors.0"></micro-user> ·
+                <i class="fa fa-pencil-alt"></i> Edited by
+                <span data-content="join item.authors 'user'">
+                    <template><micro-user data-user="user"></micro-user></template>
+                </span>
+            </footer>
         </form>
     </template>
     <style>
@@ -817,6 +808,7 @@
             border-radius: var(--micro-size-xxs);
             margin: 1.5rem 0;
             list-style: none;
+            cursor: pointer;
         }
 
         [is=listling-item].listling-item-trashed {
@@ -841,7 +833,6 @@
         }
 
         [is=listling-item] header {
-            border-bottom: 1px solid var(--micro-color-delimiter);
             margin: 0;
         }
 
@@ -885,12 +876,11 @@
             right: auto;
         }
 
-        .micro-panel > div > .listling-item-check,
-        [is=listling-item].listling-item-trashed .micro-panel > div > .listling-item-uncheck {
+        .micro-panel > .listling-item-check {
             color: var(--micro-color-border);
         }
 
-        .micro-panel > div > .listling-item-uncheck {
+        [is=listling-item].listling-item-checked:not(.listling-item-trashed) .micro-panel > .listling-item-check {
             color: forestgreen;
         }
 
@@ -907,14 +897,19 @@
         }
 
         .listling-item-content {
-            padding: 0 calc(1.5rem / 4);
+            padding: 0 var(--micro-size-xs);
+            border-top: 1px solid var(--micro-color-delimiter);
+        }
+
+        [is=listling-item].listling-item-mode-view > form:not(.listling-item-has-content) .listling-item-content {
+            display: none;
         }
 
         .listling-item-content p,
         .listling-item-content ul,
         .listling-item-content dl,
         .listling-item-content label {
-            margin: calc(1.5rem / 4) 0;
+            margin: var(--micro-size-rxs) 0;
         }
 
         .listling-item-content .micro-panel p,
@@ -953,6 +948,15 @@
             font: 0.875em / 1.5 monospace, monospace;
         }
 
+        .listling-item-footer {
+            padding: var(--micro-size-rxs);
+            border-top: 1px solid var(--micro-color-delimiter);
+        }
+
+        [is=listling-item] > form:not(.listling-item-expanded) .listling-item-footer {
+            display: none;
+        }
+
         [is=listling-item]:not(.listling-item-mode-view) .listling-item-mode-view,
         [is=listling-item]:not(.listling-item-mode-edit) .listling-item-mode-edit,
         [is=listling-item].listling-item-trashed .micro-ol-handle,
@@ -966,7 +970,6 @@
         [is=listling-item]:not(.listling-item-may-modify) .listling-item-edit,
         [is=listling-item]:not(.listling-item-may-modify) .listling-item-trash,
         [is=listling-item].listling-item-trashed .listling-item-menu li:last-child,
-        body[noninteractive] [is=listling-item] > form:not(.listling-item-has-content) .listling-item-content,
         body:not(.micro-ui-map-service-enabled) .listling-item-meta,
         listling-list-page:not(.listling-list-feature-location) .listling-item-meta,
         [is=listling-item].listling-item-mode-view:not(.listling-item-has-location) .listling-item-meta,
