--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body is="listling-ui">
-    <li class="listling-ui-intro" slot="menu">
+    <li class="listling-ui-intro micro-panel" slot="menu">
         <a class="link" href="/intro"><i class="fa fa-fw fa-rocket"></i> Introduction</a>
     </li>
 
