feat(lists): Add item tempalte functionality to lists
  The "more settings" section of a list now has a new textarea
  where users can define an item tempalate.
  New item's descriptions are then pre-filled with this.

  Ref #29

--- a/client/index.html
+++ b/client/index.html
@@ -343,6 +343,13 @@
                             </template>
                         </micro-options>
                     </label>
+
+                    <label>
+                        Item template
+                        <textarea name="item_template" placeholder="Enter text that new items should start with (optional)"
+                          data-value="or lst.item_template ''">
+                        </textarea>
+                    </label>
                 </section>
             </div>
 
