--- a/client/index.html
+++ b/client/index.html
@@ -331,9 +331,14 @@
                             <template>
                                 <p>
                                     <span data-content="toText option"></span>
-                                    <small data-content="switch option 'collaborate' 'view'">
+                                    <small
+                                        data-content="switch option 'collaborate' 'contribute' 'view'"
+                                    >
                                         <template>
                                             Users collaborate on the list. They can edit everything.
+                                        </template>
+                                        <template>
+                                            Users contribute to the list. They can edit their items.
                                         </template>
                                         <template>
                                             Users view the list. They cannot edit anything.
