fixup! feat(lists): Add item tempalte functionality to lists

--- a/client/index.html
+++ b/client/index.html
@@ -349,6 +349,7 @@
                         <textarea name="item_template" placeholder="Enter text that new items should start with (optional)"
                           data-value="or lst.item_template ''">
                         </textarea>
+                        <small>New items will be created with this description</small>
                     </label>
                 </section>
             </div>
