Added #WirVsVirus Logo to start page

--- a/client/index.html
+++ b/client/index.html
@@ -30,6 +30,7 @@
             </h1>
             <p class="listling-intro-slogan">Collaborative lists</p>
             <p class="listling-intro-keywords">Free · Simple · No registration required</p>
+            <img src="{{ static_url('images/WirVsVirus_Projekt_Logo.png') }}" title="#WirVsVirus Projekt Logo" alt="#WirVsVirus Projekt Logo" width=230px height=80px/>
         </div>
 
         <div class="listling-intro-intro">
